<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioGroup_client_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioButton_client_type_sockets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_client_type_sockets" />

        <RadioButton
            android:id="@+id/radioButton_client_type_rpc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_client_type_rpc" />

        <RadioButton
            android:id="@+id/radioButton_client_type_rmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_client_type_rmi" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/text_client_host"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_client_host"
            android:inputType="number" 
            android:digits="0123456789." />

        <EditText
            android:id="@+id/text_client_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_client_port"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/toggle_client_connection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/toggle_client_turn_off"
            android:textOn="@string/toggle_client_turn_on" />

        <Button
            android:id="@+id/button_client_status_refresh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_client_refresh" 
        	android:onClick="refreshStatus"/>
    </LinearLayout>

    <EditText
        android:id="@+id/text_client_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:hint="@string/hint_client_username"
        android:inputType="text" />

    <EditText
        android:id="@+id/text_client_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:hint="@string/hint_client_topic"
        android:inputType="text" />

</LinearLayout>